Add e-mail verification

--- a/server/templates/welcome.ejs
+++ b/server/templates/welcome.ejs
@@ -34,7 +34,7 @@
 
     <p>Best regards,</p>
     <p>The MERN-auth Team</p>
-    <a class="cta-button" href="<%= payload.url %>login">Get Started</a>
+    <a class="cta-button" href="<%= payload.url %>">Verify account</a>
   </div>
   
 </div>
